--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -2,9 +2,9 @@ FROM docker.io/library/python:3-slim
 ARG MIRACRON_UPDATE_SCHEDULE="0 5 * * *"
 
 RUN pip3 install pyyaml yamale && \
-    apt update && apt install --yes curl busybox-static && apt-get clean && rm -rf /var/lib/apt/lists/* && \
+    apt update && apt install --yes wget busybox-static && apt-get clean && rm -rf /var/lib/apt/lists/* && \
     mkdir -p /var/spool/cron/crontabs && \
-    (echo '#!/bin/bash'; echo "set -o pipefail && busybox crontab -l | head -n 1 | python3 /usr/local/lib/miracron/miracron.py | busybox crontab -") > /usr/local/bin/miracron-update && \
+    (echo '#!/bin/bash'; echo "set -o pipefail && (busybox crontab -l | head -n 1; python3 /usr/local/lib/miracron/miracron.py) | busybox crontab -") > /usr/local/bin/miracron-update && \
     (echo '#!/bin/bash'; echo "busybox crontab -l") > /usr/local/bin/miracron-show && \
     (echo '#!/bin/bash'; echo "python3 /usr/local/lib/miracron/miracron.py") > /usr/local/bin/miracron-test && \
     chmod +x /usr/local/bin/miracron-update /usr/local/bin/miracron-show /usr/local/bin/miracron-test && \
