--- a/Dockerfile.debian-samba
+++ b/Dockerfile.debian-samba
@@ -1,7 +1,10 @@
 FROM docker.io/library/debian:bullseye-slim
-ARG MIRACRON_SAMBA_PASSWORD=P@ssw0rd!
+
+COPY samba/smb.conf /etc/samba/
+COPY scripts/samba-start.sh /usr/local/bin/
+
 RUN apt update && apt install --yes samba && apt-get clean && rm -rf /var/lib/apt/lists/* && \
-    (echo "${MIRACRON_SAMBA_PASSWORD}"; echo "${MIRACRON_SAMBA_PASSWORD}") | pdbedit -a -u root --password-from-stdin
-COPY docker/smb.conf /etc/samba/
-CMD ["smbd", "--foreground", "--log-stdout", "--no-process-group", "-s", "/etc/samba/smb.conf"]
+    chmod +x /usr/local/bin/samba-start.sh
+
+CMD ["/usr/local/bin/samba-start.sh"]
 EXPOSE 445
