ログレベル指定の環境変数名を変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       # 録画スケジュールを再生成するスケジュール(cron書式) (デフォルト: 毎日の午前5時)
       MIRACRON_UPDATE_SCHEDULE: "0 5 * * *"
       # ログを出力するレベル(CRITICAL, ERROR, WARNING, INFO, DEBUG のいずれか) (デフォルト: WARNING)
-      MIRACRON_LOG: INFO
+      MIRACRON_LOGLEVEL: INFO
       # コンフィグファイルのコンテナ内のパス(デフォルト: /etc/miracron/config.yml)
       MIRACRON_CONFIG: /etc/miracron/config.yml
     init: true
