--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
     },
     "extensions": [
         "ms-python.python",
+        "bungcip.better-toml",
         "EditorConfig.EditorConfig"
     ],
-    "postCreateCommand": "pip3 install pyyaml yamale && apt update && apt install --yes busybox-static"
+    "postCreateCommand": "pip3 install pyyaml pydantic mypy types-PyYAML && apt update && apt install --yes busybox-static"
 }
