曜日指定の機能を追加

--- a/config-sample.yml
+++ b/config-sample.yml
@@ -9,7 +9,7 @@ recPriority: 2
 startMarginSec: 5
 # 録画ファイルを書き出すディレクトリ(デフォルト:/var/lib/miracron/recorded)
 recordDirectory: /var/lib/miracron/recorded
-# 番組の開始時間をパースする時のタイムゾーン(デフォルト:+09:00) (よほどの事が無ければいじる必要はない)
+# 番組情報の開始時間をパースする時のタイムゾーン(デフォルト:+09:00) (よほどの事が無ければいじる必要はない)
 timezoneDelta: '+09:00'
 
 # 録画ルール(複数指定可)
@@ -24,6 +24,10 @@ rules:
     # 検索対象にするチャンネルのサービスID(複数指定可)
     serviceIds:
       - 1032
+    # 対象の曜日(0:月曜 1:火曜 ... 6:日曜)
+    weekdays:
+      - 1
+      - 2
     # 放送タイトルからキーワード・除外キーワードのマッチングを行うか(デフォルト:true)
     matchName: true
     # 放送概要からキーワード・除外キーワードのマッチングを行うか(デフォルト:false)
