コメント追記

--- a/config-sample.yml
+++ b/config-sample.yml
@@ -28,7 +28,7 @@ rules:
     # 検索対象にするチャンネルのサービスID(複数指定可)
     serviceIds:
       - 1032
-    # 対象の曜日(0:月曜 1:火曜 ... 6:日曜)
+    # 対象の曜日(0:月曜 1:火曜 2:水曜 3:木曜 4:金曜 5:土曜 6:日曜)
     weekdays:
       - 1
       - 2
