--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,16 @@
     "containerEnv": {
         "TZ": "Asia/Tokyo"
     },
-    "extensions": [
-        "ms-python.python",
-        "bungcip.better-toml",
-        "EditorConfig.EditorConfig"
-    ],
-    "postCreateCommand": "pip3 install --requirement .devcontainer/requirements.txt"
+    "postCreateCommand": "pip3 install --requirement .devcontainer/requirements.txt",
+    // https://containers.dev/supporting
+    "customizations": {
+        "vscode": {
+            "settings": {},
+            "extensions": [
+                "ms-python.python",
+                "bungcip.better-toml",
+                "EditorConfig.EditorConfig"
+            ]
+        }
+    }
 }
